<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_temp_header">

        <ListPreference
            android:enabled="true"
            android:defaultValue="metric"
            android:dialogTitle="@string/pref_units_summary"
            android:entries="@array/pref_unit_keys"
            android:entryValues="@array/pref_unit_values"
            android:key="@string/pref_units"
            android:summary="@string/pref_units_summary"
            android:title="@string/pref_units_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_display_header">
        <ListPreference
            android:enabled="true"
            android:defaultValue=""
            android:dialogTitle="@string/pref_lang_title"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:key="@string/pref_language"
            android:title="@string/pref_lang_title" />

        <SwitchPreference
            android:enabled="true"
            android:defaultValue="false"
            android:dialogTitle="@string/pref_time_format_title"
            android:key="@string/pref_time_format"
            android:summary="@string/pref_time_format_summary"
            android:title="@string/pref_time_format_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_other_header">
        <Preference
            android:enabled="true"
            android:key="@string/pref_delete_cities"
            android:summary="@string/pref_delete_cities_summary"
            android:title="@string/pref_delete_cities_title" />

        <Preference
            android:enabled="true"
            android:key="@string/pref_key"
            android:summary="@string/pref_owm_key_summary"
            android:title="@string/pref_owm_key_title" />
    </PreferenceCategory>
</PreferenceScreen>